[package]
authors = ["Tony Fettes"]
description = "micro_test macros"
name = "micro_test_macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
darling = "^0.12"
proc-macro-crate = "^1.0"

[features]
replace_assert = []
std = []
